--- a/stock market.ipynb
+++ b/stock market.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "                                                         Stock Market Portfolio Optimization                                                                          \n",
+    "**Stock Market Portfolio Optimization**                                                                         \n",
     "\n",
     "\n",
     "\n",
@@ -737,7 +736,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "                                                                    Stock Market Anomaly Detection                                                                        "
+    "**Stock Market Anomaly Detection**                                                                        "
    ]
   },
   {
@@ -1087,15 +1086,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "AAPL has a low positive correlation with GOOG and a negative correlation with NFLX in terms of adjusted close price anomalies. It suggests that price movements in AAPL have some level of simultaneous occurrence with GOOG but move inversely with NFLX. On the other hand, GOOG and NFLX show a strong negative correlation, indicating that when one experiences an anomalous price increase (or decrease), the other tends to move in the opposite direction.\n",
-    "\n",
-    "In trading volumes, GOOG shows a positive correlation with MSFT in trading volume anomalies, suggesting that these companies might have simultaneous unusual trading activities. AAPL’s volume anomalies have a negative correlation with other companies like NFLX and TSLA, indicating that when AAPL experiences unusual trading volume, these companies tend to have opposite anomalies in their trading volumes."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "          Analyzing the Risk of Anomalies          "
    ]
   },
@@ -1148,15 +1138,14 @@
     "*CONCLUSION*\n",
     "\n",
     "\n",
-    "-AAPL: Has a risk rating of approximately 0.17. It suggests that Apple’s stock shows some level of risk due to anomalies, but it is relatively moderate compared to others like NFLX.\n",
     "\n",
-    "-GOOG: With a risk rating of around 0.06, GOOG appears to be less risky compared to AAPL. It indicates fewer or less significant anomalies in its trading data.\n",
+    "-INFY : With a risk rating of around 0.06, INFY appears to be less risky compared to TCS. It indicates fewer or less significant anomalies in its trading data.\n",
     "\n",
-    "-MSFT: Shows a risk rating of 0.00, indicating the least risk among the stocks listed. It suggests that Microsoft had the fewest and smallest anomalies in its price and volume data.\n",
+    "-HDFCBANK: Shows a risk rating of 0.00, indicating the least risk among the stocks listed. It suggests that HDFCBANK had the fewest and smallest anomalies in its price and volume data.\n",
     "\n",
-    "-NFLX: Has the highest risk rating at 1.00. It indicates that Netflix is the most risky among these stocks, with the most frequent and largest anomalies detected.\n",
+    "-TCS: Has the highest risk rating at 1.00. It indicates that TCS is the most risky among these stocks, with the most frequent and largest anomalies detected.\n",
     "\n",
-    "-TSLA: The NaN value suggests that it did not have detectable anomalies in the period analyzed."
+    "-RELIANCE: The NaN value suggests that it did not have detectable anomalies in the period analyzed."
    ]
   },
   {
@@ -1165,11 +1154,6 @@
    "source": [
     " *So, this is how you can detect, analyze, and interpret the anomalies in the stock market. Anomalies in the stock market are important because they can indicate opportunities or risks. For example, a sudden spike in a stock’s price could be due to positive news about the company or its industry, which signals a potential investment opportunity. Conversely, an unexpected price drop could warn of underlying issues or market sentiment changes, which signals a risk that investors may need to manage.*"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
